右側の余白が消えることを確認

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 
 <!--ヘッダー-->
+<div id="wrap">  
+<div class="wrap">  
 <header>
 <!--メニューバー-->
 <div class="button_container" id="toggle">
@@ -34,7 +36,7 @@
 </header>
 <body>
 <!--タイトル-->
-<div class="wrap">    
+  
   <div class="header-top">
      <div class="header-right"> 
       <h1 class="my-job">Web Engineer</h1>
@@ -232,8 +234,9 @@
     </div>
   </div>
 </footer>
-</div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
       <script src="./js/main.js"></script>
 </body>
+</div>
+</div>
 </html>
