--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
 
     <div id="copyright" class="copyright">
       <div class="SNS-icon">
-              <p1><i class="fab fa-twitter-square fa-3x" ></i></p1>
-              <p2><i class="fab fa-linkedin fa-3x"></i></p2>
-              <p3><i class="fab fa-facebook-square fa-3x"></i></p3>
+              <a href="https://twitter.com/daisukesasaki56"><p1><i class="fab fa-twitter-square fa-3x" ></i></p1></a>
+              <a href="https://www.linkedin.com/in/%E5%A4%A7%E8%BC%94-%E4%BD%90%E3%80%85%E6%9C%A8-5038a619a/"><p2><i class="fab fa-linkedin fa-3x"></i></p2></a>
+              <a href="https://www.facebook.com/profile.php?id=100006468396288"><p3><i class="fab fa-facebook-square fa-3x"></i></p3></a>
       </div>
       <p class="copy-right-text">@ 2020 Daisuke Sasaki All Rights Reserved.</p>
     </div>
