--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       1992年：宮城県登米市生まれ<br><br>
       2011年：宮城県佐沼高等学校普通科卒業<br><br>
       2016年：信州大学人文学部卒業<br><br>
-      PHPを使ったバックエンドサービスの開発、Wordpress、<br>DrupalのCMSでのWebサイト開発経験あり。<br>
+      PHPを使ったバックエンドサービスの開発、<br>WordpressでのWebサイト開発経験あり。<br>
     </p>
   </div>
 </div>
