トップへ戻るボタンを実装済み

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <a href="mailto:gerund25495641@gmail.com" class=""><button name="button">お仕事の依頼はこちらから</button></a>
     </div>
   </div>
+  <div id="page_top"><a href="#"></a></div>
 <div class="main_content">
 <!-- 自己紹介 -->
 <div class="profile_section" id="profile_section">
@@ -230,6 +231,7 @@
     </div>
   </div>
 </footer>
+
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
       <script src="./js/main.js"></script>
 </body>
