作品集を修正し、アップデート

--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
     </div>
     </a>
     
-    <a href="http://to-do-app-daisuke-sasaki.herokuapp.com/"  target="_blank"><div class="Work2">
+    <a href="https://www.daisuke-sasaki.jp/"  target="_blank"><div class="Work2">
     </div>
     <div class="Work2-hover">
-        <h1>Todo管理アプリ</h1>
+        <h1>山形紹介サイト</h1>
          <h2>使用技術</h2>
-         <h3>HTML, CSS, JavaScript,PHP,laravel</h3>
-         <h4>タスク管理を行うアプリです。</h4>
+         <h3>HTML, CSS, JavaScript,jQuery</h3>
+         <h4>山形の魅力を紹介するサイトです</h4>
     </div>
     </a>
     <a href="http://daisuke-sasaki.xyz/web-company-contact/"  target="_blank"><div class="Work3">
