--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="service-subtitle">
       <p>正式なお見積は別途ご相談の上、決定できればと思いますので、まずはお気軽にお問い合わせください。</p>
   </div>
-      <div class="service_content">
+      <div class="service_content_part">
           <div class="service-content-title1"><p>Coding</p></div>
           <div class="service-price1">
               <p1>コード修正/1ページ</p1>
@@ -184,6 +184,7 @@
           <h1>Works</h1>
           <span class="Work-under-bar"></span>
     </div>
+<div class="work-list">
     <a href="https://daisuke2549.github.io/my_web_portfolio/"  target="_blank"><div class="Work1">
     </div>  
     <div class="Work1-hover">
@@ -213,7 +214,7 @@
     </div>
     </a>
     </div>
-
+  </div>
 
   <!-- フッター -->
 <footer id="contact_section">
