--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   </div>
 
   <div class="profile_background">
-    <span class="glyphicon glyphicon-education" style="letter-spacing:5px;" id="backgrounds_section"></span> <p>Background</p>
-    <p2>//</p2>
+    <span class="glyphicon glyphicon-education" style="letter-spacing:5px;" id="backgrounds_section"></span> <p>Background<span style= color:#2150BC;>//</span></p>
+
   </div>
 
   <div class="profile_background_content">
@@ -210,7 +210,7 @@
         <h1>コーポレートサイト</h1>
          <h2>使用技術</h2>
          <h3>HTML, CSS, jQuery, PHP, Wordpress</h3>
-         <h4>Wordpressの自作でのコーポレートサイトです。</h4>
+         <h4>Wordpressの自作での<br>コーポレートサイトです。</h4>
     </div>
     </a>
     </div>
