作品集リンク修正

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <span class="Work-under-bar"></span>
     </div>
 <div class="work-list">
-    <a href="https://daisuke2549.github.io/my_web_portfolio/"  target="_blank"><div class="Work1">
+    <a href="https://daisuke2549.github.io/Web-engineer-portfolio-site/"  target="_blank"><div class="Work1">
     </div>  
     <div class="Work1-hover">
     <h1>自己紹介サイト</h1>
@@ -195,7 +195,7 @@
     </div>
     </a>
     
-    <a href="https://www.daisuke-sasaki.jp/"  target="_blank"><div class="Work2">
+    <a href="https://daisuke2549.github.io/yamagata-introduction-site/"  target="_blank"><div class="Work2">
     </div>
     <div class="Work2-hover">
         <h1>山形紹介サイト</h1>
