リンクをクリックしたときに別タブでリンク先が開くようにaタグを修正。

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
     <div id="copyright" class="copyright">
       <div class="SNS-icon">
-              <a href="https://twitter.com/daisukesasaki56" target="_blank"><p1><i class="fab fa-twitter-square fa-3x" ></i></p1></a>
+              <a href="https://twitter.com/daisukesasaki56" ><p1><i class="fab fa-twitter-square fa-3x" ></i></p1></a>
               <a href="https://www.linkedin.com/in/%E5%A4%A7%E8%BC%94-%E4%BD%90%E3%80%85%E6%9C%A8-5038a619a/" target="_blank"><p2><i class="fab fa-linkedin fa-3x"></i></p2></a>
               <a href="https://www.facebook.com/profile.php?id=100006468396288" target="_blank"><p3><i class="fab fa-facebook-square fa-3x"></i></p3></a>
       </div>
